--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   <div class="section">
     <h2>Una cartita para ti ✨</h2>
     <div class="letter">
-      <p>Hola mi amor 💖,</p>
-      <p>Quise hacerte este sitio para recordarte lo mucho que te amo y lo importante que eres para mí. Cada día contigo es un regalo. 🌸</p>
+      <p>Hola mi vida ❤️‍🩹,</p>
+      <p>Quise hacerte esto para recordarte lo mucho que te amo y lo importante que eres para mí. Desde el dia que te conoci te volviste una parte muy importante en mi,te admiro mucho eres una persona muy valiosa y hermosa . 🌸</p>
       <p>Gracias por existir, por tu risa, por tu ternura. Eres lo mejor de mi mundo. 🌷</p>
       <p>Te amo con todo mi kokoro. 💘</p>
       <p>Con amor,</p>
