--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Para Mi Amor 💖</title>
+  <title>Para Mis ojitos preciosos 🥹i</title>
   <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
   <style>
     body {
@@ -70,22 +70,23 @@
 <body>
   <header>
     <h1>Para Mi Amorcito 💕</h1>
-    <p>Hecho con todo mi corazón 💌</p>
+    <p>Piwkenyeyu</p>
   </header>
 
   <div class="section">
     <h2>Una cartita para ti ✨</h2>
     <div class="letter">
       <p>Hola mi vida ❤️‍🩹,</p>
-      <p>Quise hacerte esto para recordarte lo mucho que te amo y lo importante que eres para mí. Desde el dia que te conoci te volviste una parte muy importante en mi,te admiro mucho eres una persona muy valiosa y hermosa . 🌸</p>
-      <p>Gracias por existir, por tu risa, por tu ternura. Eres lo mejor de mi mundo. 🌷</p>
-      <p>Te amo con todo mi kokoro. 💘</p>
+      <p>Quise hacerte esto para recordarte lo mucho que te amo y lo importante que eres para mí.
+        Desde el dia que te conoci te volviste muy importante para mi y te hiciste un espacio en mi corazon que nadie puede quitar, te admiro mucho eres una persona muy valiosa y hermosa y no me refiero a solo fisicamente.</p>
+      <p>Te amo muchisimo y me encantas, me gustas mucho por tus expresiones tan graciosas, tu ternura, tu manera de ser, por ser tan sincera, porque siento que contigo puedo hablar de cualquier cosa, porque me inspiras y motivas a ser mejor. Eres la mujer con la que sueño estar. 🌷</p>
+      <p>Te amo con todo mi corazon preciosa</p>
       <p>Con amor,</p>
-      <p>Tu personita especial 🥰</p>
+      <p>Tu bebe chiquito 🥰</p>
     </div>
-    <button onclick="mostrarSorpresa()">Haz clic si me amas 💕</button>
+    <button onclick="mostrarSorpresa()">tocá si me amas 💕</button>
     <div class="surprise" id="sorpresa">
-      🎁 ¡Sorpresa! Eres mi tesoro más valioso. 💎
+      🎁 Yo te amo muchisisisimooo maaaas, y deja de dejarme en visto o cuando te vea de nuevo me vas a deber unos cuantos abrazos y besos🥺.
     </div>
   </div>
 
@@ -97,7 +98,7 @@
     function crearCorazon() {
       const heart = document.createElement('div');
       heart.classList.add('heart');
-      heart.textContent = '💖';
+      heart.textContent = '❤️‍🩹';
       heart.style.left = Math.random() * 100 + 'vw';
       heart.style.animationDuration = 3 + Math.random() * 2 + 's';
       document.body.appendChild(heart);
