--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Para Mis ojitos preciosos🥹</title>
+  <title>Para el amor de mi vida</title>
   <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
   <style>
     body {
@@ -69,7 +69,7 @@
 </head>
 <body>
   <header>
-    <h1>Para Mi Amorcito 💕</h1>
+    <h1>Para Mis ojitos preciosos🥹</h1>
     <p>Piwkenyeyu</p>
   </header>
 
@@ -78,15 +78,15 @@
     <div class="letter">
       <p>Hola mi vida ❤️‍🩹,</p>
       <p>Quise hacerte esto para recordarte lo mucho que te amo y lo importante que eres para mí.
-        Desde el dia que te conoci te volviste muy importante para mi y te hiciste un espacio en mi corazon que nadie puede quitar, te admiro mucho eres una persona muy valiosa y hermosa y no me refiero a solo fisicamente.</p>
+        Desde el dia que te conoci te volviste muy importante para mi y te hiciste un espacio en mi corazon que nadie puede remplazar, te admiro mucho eres una persona muy valiosa y hermosa y no me refiero a solo fisicamente.</p>
       <p>Te amo muchisimo y me encantas, me gustas mucho por tus expresiones tan graciosas, tu ternura, tu manera de ser, por ser tan sincera, porque siento que contigo puedo hablar de cualquier cosa, porque me inspiras y motivas a ser mejor. Eres la mujer con la que sueño estar. 🌷</p>
       <p>Te amo con todo mi corazon preciosa</p>
-      <p>Con amor,</p>
+      <p>Con amor</p>
       <p>Tu bebe chiquito 🥰</p>
     </div>
     <button onclick="mostrarSorpresa()">tocá si me amas 💕</button>
     <div class="surprise" id="sorpresa">
-      🎁 Yo te amo muchisisisimooo maaaas, y deja de dejarme en visto o cuando te vea de nuevo me vas a deber unos cuantos abrazos y besos🥺.
+      🎁 Yo te amo muchisisisisisimooo maaaas, y deja de dejarme en visto o cuando te vea me vas a deber unos cuantos abrazos y besos 🥺.
     </div>
   </div>
 
