--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     function crearCorazon() {
       const heart = document.createElement('div');
       heart.classList.add('heart');
-      heart.textContent = '💜';
+      heart.textContent = '❤️‍🩹';
       heart.style.left = Math.random() * 100 + 'vw';
       heart.style.animationDuration = 3 + Math.random() * 2 + 's';
       document.body.appendChild(heart);
