--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
 
     <div class="imagenes" id="imagenes" style="display: none;">
-      <img src="https://drive.usercontent.google.com/download?id=1QV_axJWDZt3Lv0g8a37a1p4meRefV79j&export=download&authuser=0&confirm=t&uuid=5c573407-1579-4542-b38a-2df2cbb58bb9&at=APcmpozd1OZUmDLvo1ud2JGRFliG:1746394820934" alt="Foto romántica">
+      <img src="<a href='https://postimg.cc/q6zWPzqc' target='_blank'><img src='https://i.postimg.cc/q6zWPzqc/IMG-20240115-WA0067-1.jpg' border='0' alt='IMG-20240115-WA0067-1'/></a>" alt="Foto romántica">
     </div>
 
     <audio id="musica" src="https://drive.google.com/uc?export=download&id=1KcgWiTLt_LRQUSD6Y7p8lwLIA0ukCWo-" loop></audio>
