--- a/index.html
+++ b/index.html
@@ -32,14 +32,8 @@
       color: #e6b2d1;
     }
     @keyframes fall {
-      0% {
-        top: -50px;
-        opacity: 1;
-      }
-      100% {
-        top: 110%;
-        opacity: 0;
-      }
+      0% { top: -50px; opacity: 1; }
+      100% { top: 110%; opacity: 0; }
     }
     .section {
       padding: 40px 20px;
@@ -105,10 +99,10 @@
     </div>
 
     <div class="imagenes" id="imagenes" style="display: none;">
-      <img src="<a href='https://postimg.cc/q6zWPzqc' target='_blank'><img src='https://i.postimg.cc/q6zWPzqc/IMG-20240115-WA0067-1.jpg' border='0' alt='IMG-20240115-WA0067-1'/></a>" alt="Foto romántica">
+      <img src="https://drive.google.com/uc?export=view&id=1QV_axJWDZt3Lv0g8a37a1p4meRefV79j" alt="Foto romántica">
     </div>
 
-    <audio id="musica" src="https://drive.google.com/uc?export=download&id=1KcgWiTLt_LRQUSD6Y7p8lwLIA0ukCWo-" loop></audio>
+    <audio id="musica" src="https://media.vocaroo.com/mp3/1aoxmtEh9ETI" loop></audio>
   </div>
 
   <script>
