--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
 
     <div class="imagenes" id="imagenes" style="display: none;">
-      <img src="https://drive.google.com/uc?export=view&id=1QV_axJWDZt3Lv0g8a37a1p4meRefV79j" alt="Foto romántica">
+      <img src="<a href='https://postimg.cc/q6zWPzqc' target='_blank'><img src='https://i.postimg.cc/q6zWPzqc/IMG-20240115-WA0067-1.jpg' border='0' alt='IMG-20240115-WA0067-1'/></a>" alt="Foto romántica">
     </div>
 
     <audio id="musica" src="https://media.vocaroo.com/mp3/1aoxmtEh9ETI" loop></audio>
