--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
     <h2>Una cartita para ti ✨</h2>
     <div class="letter">
       <p>Hola mi vida ❤️‍🩹,</p>
-      <p>Quise hacerte esto para recordarte lo mucho que te amo y lo importante que eres para mí.
-        Desde el día que te conocí te volviste muy importante para mí y te hiciste un espacio en mi corazón que nadie puede reemplazar. Te admiro mucho, eres una persona muy valiosa y hermosa, y no me refiero solo físicamente.</p>
-      <p>Te amo muchísimo y me encantas. Me gustas mucho por tus expresiones tan graciosas, tu ternura, tu manera de ser, por ser tan sincera, porque siento que contigo puedo hablar de cualquier cosa, porque me inspiras y motivas a ser mejor. Eres la mujer con la que sueño estar. 🌷</p>
+      <p>Quise escribirte esto para recordarte lo mucho que te amo y lo importante que eres para mí. Desde el día en que te conocí, encontraste un lugar en mi corazón que nadie más podrá ocupar. Te has vuelto una parte esencial de mi vida.</p>
+      <p>Te admiro profundamente. Eres una persona valiosa y hermosa, y no lo digo solo por tu apariencia aunque también lo seas, sino por lo increíble que eres por dentro.
+       Me encantas. Me gustas por tantas razones: por tus expresiones tan graciosas, por tu ternura, por la forma en que eres tan tú. Me encanta que seas sincera, que me hagas sentir que contigo puedo hablar de cualquier cosa. Me inspiras, me motivas a ser una mejor versión de mí, y me haces soñar con un futuro contigo.</p>
       <p>Te amo con todo mi corazón preciosa</p>
+     </p>Eres la mujer con la que sueño estar. 🌷</p>
       <p>Con amor,</p>
       <p>Tu bebé chiquito 🥰</p>
     </div>
