--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
 
     <div class="imagenes" id="imagenes" style="display: none;">
-      <a href='https://postimg.cc/q6zWPzqc' target='_blank'><img src='https://i.postimg.cc/q6zWPzqc/IMG-20240115-WA0067-1.jpg' border='0' alt='IMG-20240115-WA0067-1'/></a>" 
+      <img src='https://i.postimg.cc/q6zWPzqc/IMG-20240115-WA0067-1.jpg' border='0' alt='IMG-20240115-WA0067-1'/></a>" 
     </div>
 
     <audio id="musica" src="https://media.vocaroo.com/mp3/1aoxmtEh9ETI" loop></audio>
