--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
        Me encantas. Me gustas por tantas razones: por tus expresiones tan graciosas, por tu ternura, por la forma en que eres tan tú. Me encanta que seas sincera, que me hagas sentir que contigo puedo hablar de cualquier cosa. Me inspiras, me motivas a ser una mejor versión de mí, y me haces soñar con un futuro contigo.</p>
       <p>Te amo con todo mi corazón preciosa</p>
      </p>Eres la mujer con la que sueño estar. 🌷</p>
-      <p>Con amor,</p>
+      <p>Con amor</p>
       <p>Tu bebé chiquito 🥰</p>
     </div>
 
