--- a/index.html
+++ b/index.html
@@ -92,9 +92,12 @@
     <h2>Una cartita para ti ✨</h2>
     <div class="letter">
       <p>Hola mi vida ❤️‍🩹,</p>
-      <p>Quise hacerte esto para recordarte lo mucho que te amo...</p>
-      <p>Te amo con todo mi corazón preciosa</p>
-      <p>Con amor,</p>
+      <p>Quise escribirte esto para recordarte lo mucho que te amo y lo importante que eres para mí. Desde el día en que te conocí, encontraste un lugar en mi corazón que nadie más podrá ocupar. Te has vuelto una parte esencial de mi vida.
+        Te admiro profundamente. Eres una persona valiosa y hermosa, y no lo digo solo por tu apariencia aunque también lo seas, sino por lo increíble que eres en tu interior.
+        Me encantas. Me gustas por tantas razones: por tus expresiones tan graciosas, por tu ternura, por la forma en que eres tan tú. Me encanta que seas sincera, que me hagas sentir que contigo puedo hablar de cualquier cosa. Me inspiras, me motivas a ser una mejor versión de mí, y me haces soñar con un futuro contigo.</p>
+      <p>Te amo con todo mi corazón preciosa
+      Eres la mujer con la que sueño estar. 🌷</p>
+      </p> Con amor</p>
       <p>Tu bebé chiquito 🥰</p>
     </div>
 
