--- a/index.html
+++ b/index.html
@@ -92,16 +92,18 @@
     <h2>Una cartita para ti ✨</h2>
     <div class="letter">
       <p>Hola mi vida ❤️‍🩹,</p>
-      <p>Quise escribirte esto para recordarte lo mucho que te amo y lo importante que eres para mí. Desde el día en que te conocí, encontraste un lugar en mi corazón que nadie más podrá ocupar. Te has vuelto una parte esencial de mi vida.
-        Te admiro profundamente. Eres una persona valiosa y hermosa, y no lo digo solo por tu apariencia aunque también lo seas, sino por lo increíble que eres en tu interior.
-        Me encantas. Me gustas por tantas razones: por tus expresiones tan graciosas, por tu ternura, por la forma en que eres tan tú. Me encanta que seas sincera, que me hagas sentir que contigo puedo hablar de cualquier cosa. Me inspiras, me motivas a ser una mejor versión de mí, y me haces soñar con un futuro contigo.</p>
-      <p>Te amo con todo mi corazón preciosa
-      Eres la mujer con la que sueño estar. 🌷</p>
+      <p>Quise escribirte estas palabras para recordarte cuánto te amo y lo importante que eres para mí.
+        Desde el primer día en que te conocí, ocupaste un lugar en mi corazón que nadie más podría llenar, te volviste esencial en mi vida.</p>
+     </p>Te admiro profundamente. Eres una mujer valiosa, única y hermosa, y no me refiero solo a tu belleza exterior que es evidente, sino a todo lo que eres por dentro: tu nobleza, tu forma de pensar, tu manera de amar.
+       Me encantas en todos los sentidos. Me gustas por tus expresiones tan graciosas, por tu ternura, por esa forma tan especial que tienes de ser tú misma. Me fascina tu sinceridad, la confianza que me das, y el hecho de que contigo puedo hablar de todo, sin miedo ni filtros.
+      Tú me inspiras. Me das fuerzas para ser mejor cada día, y me haces soñar con un futuro a tu lado.
+      Eres, sin duda, la mujer con la que quiero compartir mis días, mis metas, y mi amor.</p>
+      </p>Eres la mujer con la que sueño estar. 🌷</p>
       </p> Con amor</p>
       <p>Tu bebé chiquito 🥰</p>
     </div>
 
-    <button onclick="mostrarSorpresa()">Tocá si me amas 💕</button>
+    <button onclick="mostrarSorpresa()">Tocá si me amas 🥺</button>
 
     <div class="surprise" id="sorpresa">
       🎁 Yo te amo muchisisisisisimooo maaaas, y deja de dejarme en visto o cuando te vea me vas a deber unos cuantos abrazos y besos 🥺.
