--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!-- Video oculto inicialmente -->
     <video id="video" controls>
-      <source src="https://drive.google.com/uc?export=view&id=1WQOpsxmnNXV5Umv-Cxh6VHpJgEtiIKjH" type="video/mp4">
+      <source src="VID-20240112-WA0095.mp4" type="video/mp4">
       Tu navegador no soporta este formato de video.
     </video>
 
@@ -127,7 +127,9 @@
       "https://i.postimg.cc/yxPBSRzG/IMG-20240115-WA0067-1.jpg",
       "https://i.postimg.cc/qMnwTdTz/20231223-232201.jpg",
       "https://i.postimg.cc/HLS42YQP/IMG-20240112-WA0013.jpg",
-      "https://i.postimg.cc/d1LRNb6Q/20240207-150646.jpg"
+      "https://i.postimg.cc/d1LRNb6Q/20240207-150646.jpg",
+      "https://i.postimg.cc/jq69HND8/VID-20240124-WA0032-exported-366.jpg",
+      "https://i.postimg.cc/Kj5HmSXX/Screenshot-20250420-171620-3.png"
     ];
     let indiceImagen = 0;
 
