--- a/index.html
+++ b/index.html
@@ -114,12 +114,14 @@
     </div>
 
     <!-- Video oculto inicialmente -->
-    <video id="video" controls>
+    <div style="text-align: center;">
+      <video id="video" width="400" style="border: 4px #b497bd; border-radius: 20px; box-shadow: 0 0 15px #b497bd;"  autoplay loop>
+
       <source src="VID-20240112-WA0095.mp4" type="video/mp4">
       Tu navegador no soporta este formato de video.
     </video>
-
-    <audio id="musica" src="https://media.vocaroo.com/mp3/1aoxmtEh9ETI" loop></audio>
+  </div>
+    <audio id="musica" src="https://raw.githubusercontent.com/Braindeiko01/MILU/refs/heads/main/MILO%20J%20-%20M.A.I%20(Video%20Oficial).mp3" loop playsinline></audio>
   </div>
 
   <script>
